--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 }
 body {
     margin: 0px;
-    background-color: rgb(104,176,172);
+    background-color: rgb(141,193,169);
 }
 .header{
     margin: 0px;
@@ -27,4 +27,10 @@ body {
     padding: 25px;
     text-align: center;
     background-color: rgb(74,124,89);
+}
+.windows{
+    margin: 0px;
+    padding: 20px;
+    text-align: center;
+    background-color: rgb(104,176,172);
 }
