--- a/MasterContent.master
+++ b/MasterContent.master
@@ -21,23 +21,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>coordiNation centric</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
 
-    <link href="/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
-    <link href="/css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
+    <link href="./css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="./css/jquery-ui.min.css" rel="stylesheet" type="text/css" />
     <link href="//fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,700,700italic,400italic,300" rel="stylesheet" type="text/css">
-    <link href="/css/jquery.fancybox.css" rel="stylesheet" type="text/css" />
+    <link href="./css/jquery.fancybox.css" rel="stylesheet" type="text/css" />
     
-    <script type="text/javascript" src="/js/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.validate.additional.methods.js"></script>
-    <script type="text/javascript" src="/js/jquery.mask.min.js"></script>
-    <script type="text/javascript" src="/js/jquery.fancybox.pack.js"></script>
-    <script type="text/javascript" src="/js/jquery.prevent-double-submit.js"></script>
+    <script type="text/javascript" src="./js/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="./js/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="./js/jquery.validate.min.js"></script>
+    <script type="text/javascript" src="./js/jquery.validate.additional.methods.js"></script>
+    <script type="text/javascript" src="./js/jquery.mask.min.js"></script>
+    <script type="text/javascript" src="./js/jquery.fancybox.pack.js"></script>
+    <script type="text/javascript" src="./js/jquery.prevent-double-submit.js"></script>
         
-    <link href="/css/main.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="/js/main.js"></script>
+    <link href="./css/main.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript" src="./js/main.js"></script>
 
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
