edited the submit button

--- a/css/main.css
+++ b/css/main.css
@@ -34,3 +34,7 @@ body {
     text-align: center;
     background-color: rgb(104,176,172);
 }
+.submit{
+    padding: 20px;
+    text-align: center;
+}
