--- a/MasterContent.master
+++ b/MasterContent.master
@@ -6,7 +6,7 @@
 
     protected void Page_Load(object sender, System.EventArgs e)
     {
-
+        General.CleanUpFolders();
     }
     
 </script>
