Added footer to all pages with copyright and FFmpeg license.

--- a/MasterContent.master
+++ b/MasterContent.master
@@ -63,7 +63,22 @@
             </asp:ContentPlaceHolder>
 
     </div>
-
-
+    <div class="container text-center">
+        <div class="row copyright">
+            <div class="col-md-12">
+                Copyright &copy <%=DateTime.Now.Year%> SNIPS
+            </div>
+        </div>
+        <div class="row ffmpeg-license">
+            <div class="col-md-12">
+                This software uses code of 
+                <a href=http://ffmpeg.org>FFmpeg</a> 
+                licensed under the 
+                <a href="http://www.gnu.org/licenses/old-licenses/lgpl-2.1.html">LGPLv2.1</a> 
+                and its source can be downloaded 
+                <a href=link_to_your_sources>here</a>.
+            </div>
+        </div>       
+    </div>
 </body>
 </html>
