--- a/MasterContent.master
+++ b/MasterContent.master
@@ -77,6 +77,14 @@
                 and its source can be downloaded 
                 <a href=link_to_your_sources>here</a>.
             </div>
+            <div class="col-md-12">
+                Icons made by 
+                <a href="http://www.freepik.com" title="Freepik">Freepik</a> 
+                from 
+                <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> 
+                is licensed by 
+                <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a>
+            </div>
         </div>      
     </div>
 </body>
