--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,11 @@ input[type="text"] {
     width: 40px;
     height: 40px;
 }
+#lessfields {
+    border-radius: 24px;
+    width: 40px;
+    height: 40px;
+}
 .submit{
     padding: 20px;
     text-align: center;
